# ros2_latency_evaluation

./: .gitignore  README.md
config/: qos_connext.xml  qos_connextdds.xml  qos_cyclonedds.xml  qos_fastrtps.xml
src/performances/: .clang-format
src/performances/benchmark/: CMakeLists.txt  README.md
src/performances/benchmark/payload/: bi_payloads.txt
src/performances/benchmark/src/: benchmark.cpp  utils.cpp
src/performances/benchmark/test/: CMakeLists.txt  test_benchmark_utils.cpp
src/performances/benchmark/topology/: bi_data_processing_pipeline_profiled.json  bi_payload_architecture.json  bi_payload_architecture_profiled.json
src/performances/irobot_interfaces_plugin/: CMakeLists.txt  add_cmake.txt  create_msg_files.py
src/performances/irobot_interfaces_plugin/msg/: Stamped256b.msg  Stamped32b.msg  Stamped512b.msg  Stamped63000b.msg
src/performances/performance_test/: CMakeLists.txt
src/performances/performance_test/include/cli/: options.hpp
src/performances/performance_test/scripts/plot_scripts/: cpu_ram_plot.py  data_utils.py  latency_reliability_plot.py  plot_common.py
src/performances/performance_test/src/ros2/: names_utilities.cpp  system.cpp
src/performances/performance_test/test/: test_node.cpp  test_stat.cpp  test_system.cpp  test_tracker.cpp
src/performances/performance_test_factory/: CMakeLists.txt
src/performances/performance_test_factory/include/performance_test_factory/: factory.hpp  load_plugins.hpp  parse_data_processing_pipeline_section_from_json_node.hpp
src/performances/performance_test_factory/src/: factory.cpp  load_plugins.cpp
src/performances/performance_test_factory/test/: CMakeLists.txt  test_factory.cpp  test_parse_data_processing_pipeline_section_from_json_node.cpp
src/performances/performance_test_factory/test/files/: test_architecture.json  test_architecture_data_processing_pipeline.json  test_architecture_data_processing_pipeline_qos.json  test_payloads.txt
src/performances/performance_test_plugin_cmake/cmake/: generate_script.py
src/scripts/: create_paper_csv.py  log.txt  prepare_benchmark_output_for_paper.sh  testing_strategy.sh
(+9 files in other folders)
